[metadata]
name = django-mysql
version = 3.7.0
description = Django-MySQL extends Django's built-in MySQL and MariaDB support their specific features not available on other databases.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/django-mysql
project_urls =
    Changelog = https://github.com/adamchainz/django-mysql/blob/master/HISTORY.rst
    Twitter = https://twitter.com/adamchainz
license = BSD
keywords =
    Django
    MySQL
    MariaDB
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Database
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires = Django>=2.0
python_requires = >=3.5
zip_safe = False

[options.packages.find]
where = src

[coverage:run]
branch = True
include = */django_mysql/*

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203,E501,W503

[isort]
include_trailing_comma = True
force_grid_wrap = 0
known_first_party = django_mysql
known_third_party = pytest,django
line_length = 88
multi_line_output = 3
use_parentheses = True

[tool:multilint]
paths =
    setup.py
    src
    tests
