[metadata]
name = django_mysql
version = 4.9.0
description = Django-MySQL extends Django's built-in MySQL and MariaDB support their specific features not available on other databases.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/adamchainz/django-mysql
author = Adam Johnson
author_email = me@adamj.eu
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Database
    Typing :: Typed
keywords =
    Django
    MySQL
    MariaDB
project_urls =
    Documentation = https://django-mysql.readthedocs.io/
    Changelog = https://django-mysql.readthedocs.io/en/latest/changelog.html
    Mastodon = https://fosstodon.org/@adamchainz
    Twitter = https://twitter.com/adamchainz

[options]
packages = find:
install_requires =
    Django>=3.2
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[coverage:run]
branch = True
parallel = True
source =
    django_mysql
    tests

[coverage:paths]
source =
    src
    .tox/**/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203
per-file-ignores =
    */__init__.py:F401
